--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 **/__pycache__/ 
 ckpt/**
 data/benchmark_data/**
-./experiments/**
+experiments/*.tsv.gz
 finetune/**
 logdir/**
 **/representation_dir/
 examine_finetune.ipynb
 umap_representation.Rmd
+finetune.sh
+pretrain.sh
+representation.sh
+requirements.txt
 
 data/pubchem_data/pubchem_1M_random.txt
 data/pubchem_data/pubchem-10m-clean.txt
