--- a/config_representation.yaml
+++ b/config_representation.yaml
@@ -4,7 +4,7 @@ task_name: "clintox"             # Name of the benchmark to be predicted inlcudi
 
 model_type: "XGBClassifier"              # ML algorithm to be used for prediction. Can be one of: XGBClassifier, XGBRegressor, RFClassifier, or RFRegressor
 pretrain_architecture: "gin_concat"      # The MolE pre-training architechture. Can be: gin_concat, gin_noconcat, gcn_concat, or gcn_noconcat
-pretrained_model: "gin_concat_R1000_E8000" # The pre-trained model to be used for featurizing the data. This should be a sub-directory of ./ckpt
+pretrained_model: "gin_concat_R1000_E8000_lambda0.0001" # The pre-trained model to be used for featurizing the data. This should be a sub-directory of ./ckpt
 
 dataset:
   validation_size: 0.1               # ratio of validation data
@@ -12,5 +12,5 @@ dataset:
   splitting: scaffold           # data splitting (i.e., random/scaffold)
 
 random_search:
-  n_models: 1                   # number of models to be trained
-  n_trains: 1                  # number of times to train each model
+  n_models: 5                   # number of models to be trained
+  n_trains: 3                  # number of times to train each model
