--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -1,26 +1,29 @@
-batch_size: [32, 101, 512, 800]                  # batch size
+batch_size: [32, 101, 512, 800]                  # Possible batch sizes
 epochs: 100                     # total number of epochs
 eval_every_n_epochs: 1          # validation frequency in ./ckpt
 log_every_n_steps: 50           # print training log frequency
 fine_tune_from: gin_concat_R1000_E8000_lambda0.0001  # sub directory of pre-trained model in ./ckpt
-fp16_precision: False           # float precision 16 (i.e. True/False)
-init_lr: [0.0005, 0.001]                 # initial learning rate for the prediction head
-init_base_lr: [0.00005, 0.0001, 0.0002, 0.0005]            # initial learning rate for the base GNN encoder
+init_lr: [0.0005, 0.001]                 # Possible initial learning rate for the prediction head
+init_base_lr: [0.00005, 0.0001, 0.0002, 0.0005]            # Possible initial learning rate for the base GNN encoder
 weight_decay: 1e-6              # weight decay of Adam
-gpu: cuda:0                     # training GPU
+gpu: cuda:0                     # training device
 task_name: BBBP                  # name of fine-tuning benchmark, inlcuding
                                 # classifications: BBBP/BACE/ClinTox/Tox21/HIV/SIDER/MUV
                                 # regressions: FreeSolv/ESOL/Lipo/qm7/qm8/qm9
 
-model_type: gin_concat                 # GNN backbone (i.e., gin/gcn)
+model_type: gin_concat                 # Pre-training strategy consisting of GNN backbone ('gin' or 'gcn') and 
+                                       # representation construction ('concat' or 'noconcat')
 model: 
   num_layer: 5                          # number of graph conv layers
-  emb_dim: 200                          # embedding dimension in graph conv layers
-  feat_dim: 8000                         # output feature dimention
+  emb_dim: 200                          # representation dimension in each GNN layer. 
+                                        # If representation construction is 'concat', then the representation will have
+                                        # dimension = num_layer * emb_dim
+
+  feat_dim: 8000                       # output embedding dimension used for input ot BT loss
   pool: add                            # readout pooling (i.e., mean/max/add)
-  drop_ratio: [0, 0.1, 0.3, 0.5]
-  pred_n_layer: [1, 2]
-  pred_act: ["softplus", "relu"]
+  drop_ratio: [0, 0.1, 0.3, 0.5]       # Possible dropout ratios
+  pred_n_layer: [1, 2]                 # Possible number of layers on prediction head
+  pred_act: ["softplus", "relu"]       # Possible activation functions on prediction head
 
 dataset:
   num_workers: 10                # dataloader number of workers
@@ -29,5 +32,5 @@ dataset:
   splitting: scaffold           # data splitting (i.e., random/scaffold)
 
 random_search:
-  n_models: 5
-  n_trains: 3
+  n_models: 5                  # Number of hyperparameter configurations to try
+  n_trains: 3                  # Number of training runs for each hyperparameter configuration
