--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 batch_size: 1000                         # batch size
-warm_up: 10                             # warm-up epochs
-epochs: 1000                             # total number of epochs
+warm_up: 1                             # warm-up epochs
+epochs: 2                             # total number of epochs
 
 load_model: None                        # resume training
 eval_every_n_epochs: 1                  # validation frequency
 save_every_n_epochs: 5                  # automatic model saving frequecy
 
 init_lr: 0.0005                         # initial learning rate for Adam
-weight_decay: 1e-5                      # weight decay for Adam
+weight_decay: 0.00001                      # weight decay for Adam
 gpu: cuda:0                             # training GPU 
 
 model_type: gin_concat                  # Pre-training strategy consisting of GNN backbone ('gin' or 'gcn') and 
